# taskflow

./: .gitignore  CMakeLists.txt  build-android.sh  build-ios.sh
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  benchmarks.py  jni_invoke.cpp  test.sh
benchmarks/wavefront/: asio.cpp  job.cpp  main.cpp  matrix.hpp  omp.cpp  seq.cpp  taskflow.cpp  tbb.cpp
proj.android/: settings.gradle
proj.android/app/: build.gradle
proj.android/app/src/androidTest/java/com/example/parallel_benchmark/: ExampleInstrumentedTest.java
proj.android/app/src/main/: AndroidManifest.xml
proj.android/app/src/main/java/com/example/parallel_benchmark/: MainActivity.java
proj.android/app/src/main/res/values/: strings.xml  themes.xml
proj.android/app/src/main/res/values-night/: themes.xml
proj.android/app/src/test/java/com/example/parallel_benchmark/: ExampleUnitTest.java
proj.android/gradle/wrapper/: gradle-wrapper.properties
tbb-android/lib/cmake/tbb/: TBBConfig-release.cmake  TBBConfig.cmake
